# smallangle

./: README.md  pyproject.toml  smallangle.bundle
src/smallangle/: smallangle.py
