[tool.poetry]
name = "smallangle"
version = "0.1.0"
description = ""
authors = ["daviddavdavid <111596459+daviddavdavid@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
pandas = "^2.2.3"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
smallangle = "smallangle.smallangle:cmd_group"